force-app/main/default/objects/Notation__c/Notation__c.object-meta.xml
<CustomObject>
    <description>Objet de notation grâce à un système d&apos;étoiles</description>
    <label>Notation</label>
    <nameField>
        <label>Notez la prestation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>