force-app/main/default/objects/Notation__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>