force-app/main/default/objects/Notation__c/fields/Objet_lie__c.field-meta.xml
<CustomField>
    <fullName>Objet_lie__c</fullName>
    <externalId>true</externalId>
    <label>Objet lié</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>