force-app/main/default/objects/Notation__c/fields/Ordonnance__c.field-meta.xml
<CustomField>
    <fullName>Ordonnance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordonnance</label>
    <referenceTo>Ordonnance__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>